update with equipment id